tests/compile_fail/settings_on_unit_struct.rs
use conflaguration::Settings;

#[derive(Settings)]
struct BadConfig;

fn main() {}
