tests/compile_fail/settings_on_unit_struct.stderr
error: only named struct fields supported
 --> tests/compile_fail/settings_on_unit_struct.rs:4:8
  |
4 | struct BadConfig;
  |        ^^^^^^^^^
